# attpc_conduit

./: .gitignore  Cargo.toml  README.md  pyproject.toml  requirements.txt  run_conduit.py  run_controller.py  run_controller_dev.py  run_server.py
.github/: dependabot.yml
.github/workflows/: format.yml
attpc_conduit/: config.py  get_event.py  point_cloud.py
attpc_conduit/assets/: pad_elec.csv  pad_xy.csv
python/attpc_conduit/: __init__.py  _attpc_conduit.pyi  config.py  generate_script.py  get_trace.py  main.py  phase_cluster.py  phase_estimate.py  phase_pointcloud.py  pipeline.py  rerun_loader_merged_file.py  run_conduit.py
python/attpc_conduit/controller/: ui.py
python/attpc_conduit/core/: blueprint.py  circle.py  cluster.py  color.py  conduit_log.py  config.py  get_event.py  histograms.py  label_colors.py  pad_map.py  peak.py  phase.py  pipeline.py  point_cloud.py  state.py  static.py
python/attpc_conduit/phases/: __init__.py  cluster_phase.py  estimation_phase.py  pointcloud_phase.py
python/attpc_conduit/plot/: color.py  histogram.py
src/: conduit.rs  lib.rs
src/backend/: conduit.rs  constants.rs  ecc_reciever.rs  error.rs  event.rs  event_builder.rs  exporter_receiver.rs  graw_frame.rs  message.rs  mod.rs  pad_map.rs  point_cloud.rs  server.rs
