[package]
name = "attpc_conduit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "attpc_conduit"
crate-type = ["cdylib"]

[dependencies]
bitvec = "1.0.1"
byteorder = "1.5.0"
fxhash = "0.2.1"
numpy = "0.20.0"
pyo3 = { version = "0.20.2", features = ["macros"] }
pyo3-log = "0.9.0"
tokio = { version = "1.36.0" , features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
