[package]
name = "attpc_conduit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "attpc_conduit"
crate-type = ["cdylib"]

[dependencies]
bitvec = "1.0.1"
byteorder = "1.5.0"
fxhash = "0.2.1"
log = "0.4.22"
numpy = "0.22.1"
pyo3 = { version = "0.22.5", features = ["macros"] }
pyo3-log = "0.11.0"
tokio = { version = "1.42.0" , features = ["full"] }
