[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "attpc_conduit"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
dependencies = [
	"cmap>=0.3.0",
    "rerun-sdk>=0.19.0",
    "h5py>=3.10",
    "attpc_spyral>=0.15.0",
    "nicegui>2.0.0",
    "rpyc>6.0.0",
    "click>8.0.0",
]

[project.scripts]
rerun-loader-merged-file = "attpc_conduit.rerun_loader_merged_file:main"

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "attpc_conduit._attpc_conduit"
python-source = "python"
profile = "release"
